--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     }
   ],
   "share_target": {
-    "action": "/quickcart.html",
+    "action": "quickcart.html",
     "method": "GET",
     "enctype":"application/x-www-form-urlencoded",
     "params": {
