--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Quick Cart",
   "short_name": "quickcart",
+  "scope":"./",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -19,7 +20,7 @@
     }
   ],
   "share_target": {
-    "action": "quickcart.html",
+    "action": "index.html",
     "method": "GET",
     "enctype":"application/x-www-form-urlencoded",
     "params": {
